# omp

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: omp  parallel_for.py
omp/: __init__.py
omp/clauses/: __init__.py  collapse.py  nowait.py  private.py  reduction.py  schedule.py
omp/core/: __init__.py  ast_tools.py  entry.py  openmp.py  primitives.py  threading.py
omp/directives/: __init__.py  barrier_directive.py  critical_construct.py  for_construct.py  parallel_construct.py  parallel_for_construct.py  single_construct.py
