[tool.poetry]
name = "omp"
version = "0.1.0"
description = "A native implementation of OpenMP in Python."
authors = ["Dorian OUAKLI <dorian.ouakli@xwiki.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
